# hf_ai_agent_course_capstone

./: .gitignore  README.md  app.py  hello.py  notes.md  pyproject.toml  pytest.ini  requirements.txt  resources.md  temp.txt
src/azrock/: __init__.py  agent.py  ffmpeg_adapter.py  main.py  system_prompt.py
src/azrock/tools/: __init__.py  file_reading.py  submission_api.py  wikipedia.py  youtube.py
tests/: test_agent.py  test_e2e.py  test_llama_index_youtube_transcript.py  test_score.py
tests/test_miscellaneous/: conftest_.py  test_langchain.py  test_litellm.py  test_pydub.py  test_smolagents.py  test_speech_recognition.py
tests/tests_tools/: test_file_reading.py  test_submission_api.py  test_system_prompt.py  test_wikipedia.py  test_youtube.py
