[project]
name = "hf-ai-agent-course-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.24",
    "langchain-google-genai>=2.1.3",
    "langchain-mistralai>=0.2.10",
    "langchain-openai>=0.3.14",
    "litellm==1.66.3",
    "smolagents[litellm]==1.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
